# scepia

./: .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  environment.txt  environment.yml  setup.cfg  setup.py  test_1_basics.py
area27/: __init__.py  sc.py
data/: data_directory.txt  ens2name.txt  remap.hg38.target.npz
scepia/: __init__.py  _version.py  cli.py  data.py  plot.py  sc.py  util.py
scripts/: area27
tests/: test_1_basics.py
