[metadata]
description-file = README.md

[versioneer]
VCS = git
style = pep440
versionfile_source = area27/_version.py
versionfile_build = area27/_version.py
tag_prefix =
parentdir_prefix = area27-

[flake8]
exclude = .git,build,area27/_version.py
max-line-length = 88
extend-ignore = E203,E402,E501
select = C,E,F,W,B,B950
